﻿# Changelog
Alle nennenswerten Änderungen werden in dieser Datei dokumentitert.

Das Format orientiert sich an [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
die Nummern #XXX beziehen sich auf die Ticketnummer im Gitlab

## unveröffentlicht


## [1.1.3] - 2019-12-05

### added
 Verkaufs-Modul:
- Möglichkeit aus mehreren Druckformularen auszuwählen 
- Einbinden weiterer Druckformulare möglich (SystemInitialisierung -> sonstige Einstellungen -> Verkauf)
- Adressdaten können, neben Übernahme von Patient oder Kasse, auch v. Hand eingegeben werden
- Verkäufe gegen Bon können in Barkasse gebucht werden (SystemInitialisierung -> Abrechnung -> Offene Posten und Mahnung)
  
Abrechnung $302:
- Liste mit Behandlungstagen 'merkt' sich ihre Größe für versch. Anz. Beh.-Tage (in abrechnung.ini sperrbar, noch nicht in Gui)
- Kasse u. Rezept rot markieren wenn dringend abgerechnet werden sollte (letzte Behandlung > 10 Monate her)
- Anzeige ICD10-2
- Kassen-Zweig markieren + [F1] zeigt Liste mit für diese Kasse noch in Bearbeitung befindlichen VOs

Hauptfenster:
- Barkasse abrechnen kann (Privat-)Rechnungen berücksichtigen
-   ~  merkt sich letzte Selektion der Rechnungsarten

OpRgaf ausbuchen: 
- listet auch Verkaufsrechnungen (mahnen fehlt noch)
- merkt sich letzte Selektion der Rechnungsarten (wenn nicht gesperrt)
- Verkaufsrechnung ausbuchen 'bar an Kasse' möglich (SystemInitialisierung -> Abrechnung -> Offene Posten und Mahnung)

 
### changed
- Farbkodierung im Kalender erweitert, es können jetzt alle Buchstaben einstellig zur Kodierung benutzt werden also(F\X).
- sprechendere Fehlermeldung, wenn keine eGK im Kartenleser ist.

Verkaufs-Modul:
- Barverkauf (Bondruck) (de-)aktivierbar (SystemInitialisierung -> sonstige Einstellungen -> Verkauf)
 
Abrechnung $302:
- Gültigkeit der Zertifikate: 
     - nur eig. Zert. wird beim Öffnen des 302er geprüft
     - Zertifikate d. Annahmestellen werden nur geprüft, wenn VOs für diese Annahmestelle vorliegen 