@@ -4,11 +4,13 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Vector;
 
 import CommonTools.DatFunk;
 import mandant.IK;
+import mitarbeiter.Mitarbeiter;
 
 public class PatWithMatchingVo {
     String    nachname;
@@ -43,14 +45,13 @@ public class PatWithMatchingVo {
         result.trimToSize();
         return result;
     }
-    public Vector<String> getVoList() {
-        Vector<String> result = new Vector<String>();
+    public List<String> getVoList() {
+        List<String> rezepte = new LinkedList<String>();
         PatWithMatchingVo pat = null;
         for (int i = 0; i < patientenListe.size(); i++ ) {
-            result.add(patientenListe.get(i).rezeptnummer);
+            rezepte.add(patientenListe.get(i).rezeptnummer);
         }
-        result.trimToSize();
-        return result;
+        return rezepte;
     }
     public PatWithMatchingVo ofResultset(ResultSet rs) throws SQLException {
         PatWithMatchingVo pat = new PatWithMatchingVo(this.ik);
